examples/type_system/failing/104_missing_colon_effect_op.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// parity-expected-stderr-begin
// • 1 error • examples/type_system/failing/104_missing_colon_effect_op.flx
// error[E034]: Missing Effect Operation Colon
//
// Missing `:` in effect operation signature. Write it as `op: Type -> Return`.
//
//   examples/type_system/failing/104_missing_colon_effect_op.flx:21:11
//    |
// 21 |     print String -> Unit
//    |           ^^^^^^
//
// Note:
//   while parsing effect `Console`
// parity-expected-stderr-end
// expect: compile_error
// expect-error: E034

effect Console {
    print String -> Unit
}
